<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".ui.activity.LoginActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputDescriptionTask"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputTitleTask"

            android:background="@android:color/transparent"
            android:backgroundTint="#29B6F6"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:counterTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="#54BBCE"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/white">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDescriptionTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_description_24"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/hint_description_register_task"
                android:inputType="textMultiLine"
                android:shadowColor="#26C6DA"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonRegisterTask"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="290dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/title_button_add_task"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTimeTask"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutTimeTask"
            app:layout_constraintTop_toBottomOf="@+id/progressBarRegisterTask"
            app:layout_constraintVertical_bias="0.64"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp">

        </Button>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/adicionar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTitleTask"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#29B6F6"
            android:textColorHint="@color/white"


            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:counterTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="#54BBCE"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTitleTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_colorize_24"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/hint_title_register_task"
                android:inputType="textEmailAddress"
                android:shadowColor="#26C6DA"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDataTask"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDescriptionTask"


            android:background="@android:color/transparent"
            android:backgroundTint="#29B6F6"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:counterTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="#54BBCE"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDateTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/hint_date_register_task"
                android:inputType="date"
                android:shadowColor="#26C6DA"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTimeTask"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDataTask"

            android:background="@android:color/transparent"
            android:backgroundTint="#29B6F6"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:counterTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:hintTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:prefixTextColor="#54BBCE"
            app:startIconTint="@color/white"
            app:suffixTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editTimeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_access_time_24"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/hint_time_register_task"
                android:inputType="time"
                android:shadowColor="#26C6DA"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarRegisterTask"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTimeTask"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutTimeTask"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTimeTask" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>